--- a/interior-design/components/styles/whychooseme.module.scss
+++ b/interior-design/components/styles/whychooseme.module.scss
@@ -38,6 +38,8 @@
     overflow-x: hidden;
     padding: 0;
     margin: 0;
+    width: 100%;
+    max-width: 100vw;
   }
 
   .headingTwo {
@@ -61,6 +63,11 @@
 
   .rightContainerWhy {
     margin-bottom: 1rem;
+    margin-left: -1.5rem;
+    margin-right: -1.5rem;
+    width: 100vw;
+    position: relative;
+    height: 50dvh;
   }
 
   .headingTwo {
@@ -76,17 +83,11 @@
     padding-right: 2rem;
   }
 
-  .rightContainerWhy {
-    flex: 1;
-    height: 50dvh;
-    width: 100%;
-    position: relative;
-  }
-
-
   .lampsImg {
-    object-fit: contain;
-    max-width: 100vw;
+    object-fit: cover;
+    width: 100vw !important;
+    height: 100% !important;
+    max-width: none !important;
   }
 
   .learnMoreBtn {
